# HyaloDE

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  ROADMAP.md  deinstall.sh  install.sh
.github/workflows/: build-repo.yml
apps/hyalo-control-center/: CMakeLists.txt
apps/hyalo-control-center/data/: org.hyalo.ControlCenter.desktop
apps/hyalo-control-center/src/: main.cpp
apps/hyalo-files/: CMakeLists.txt
apps/hyalo-files/data/: hyalo-files.css  hyalo-files.desktop  org.hyalo.Files.desktop
apps/hyalo-files/src/: main.cpp
apps/hyalo-greeter/: CMakeLists.txt
apps/hyalo-greeter/data/: hyalo-greeter.css  hyalo-greeter.desktop  lightdm-hyalo-greeter.conf
apps/hyalo-greeter/src/: main.cpp
apps/hyalo-panel/: CMakeLists.txt
apps/hyalo-panel/data/: org.hyalo.Panel.desktop
apps/hyalo-panel/include/hyalo-panel/: panel_window.hpp  window_tracker.hpp  workspace_tracker.hpp
apps/hyalo-panel/src/: main.cpp  panel_window.cpp  window_tracker.cpp  workspace_tracker.cpp
apps/hyalo-software-store/: CMakeLists.txt
apps/hyalo-software-store/data/: org.hyalo.SoftwareStore.desktop
apps/hyalo-software-store/src/: main.cpp
apps/hyalo-terminal/: CMakeLists.txt
apps/hyalo-terminal/data/: hyalo-terminal.desktop
apps/hyalo-terminal/src/: main.cpp
apps/hyalo-update-center/: CMakeLists.txt
apps/hyalo-update-center/data/: org.hyalo.UpdateCenter.desktop
apps/hyalo-update-center/src/: main.cpp
apps/hyalo-wallpaper/: CMakeLists.txt
apps/hyalo-wallpaper/src/: main.cpp
assets/icons/hyalo-icons/: index.theme
assets/themes/: base.css  glass.css  graphite.css  hyalo.css  pastel.css
compositor/hyalo-compositor/: meson.build  meson_options.txt
compositor/hyalo-compositor/data/: hyalo.desktop
compositor/hyalo-compositor/include/: animation.h  hyalo-command.h  hyalo-export.h  hyalo-wallpaper.h  labwc.h  output.h  view.h
compositor/hyalo-compositor/include/config/: rcxml.h
compositor/hyalo-compositor/po/: fi.po  ru.po
compositor/hyalo-compositor/scripts/: hyalo-session
compositor/hyalo-compositor/src/: animation.c  buffer.c  hyalo-command.c  hyalo-export.c  hyalo-wallpaper.c  layers.c  meson.build  output.c  server.c  view-impl-common.c  view.c
compositor/hyalo-compositor/src/config/: rcxml.c
compositor/hyalo-compositor/subprojects/: libdisplay-info.wrap  libliftoff.wrap  seatd.wrap  v4l-utils.wrap
config/defaults/: config.json
config/labwc/: hyalo-driver-manager  hyalo-screenshot  hyalo-wallpaperd  rc.xml
config/labwc/themes/HyaloOS/openbox-3/: themerc
config/labwc/themes/LuminaDE/openbox-3/: themerc
config/locales/: en.json  pl.json  pl.json.fixed
config/mako/: config
libs/hyalo-core/: CMakeLists.txt
libs/hyalo-core/include/hyalo-core/: config_manager.hpp  localization.hpp  style_manager.hpp
libs/hyalo-core/src/: config_manager.cpp  localization.cpp  style_manager.cpp
packaging/: README.md  install-hyalode.sh
packaging/.github/workflows/: build-repo.yml
packaging/arch/: PKGBUILD  PKGBUILD-git
repo/x86_64/: hyalode.db  hyalode.files
tools/: regenerate_hyalo_icons.sh
